// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer.js should render the footer 1`] = `
<footer
  role="contentinfo"
>
  <ul
    className="footer--content"
  >
    <li>
      <a
        aria-label="Visit Mezzurite Dev Tools on GitHub"
        className="github-information--link"
        href="https://github.com/Microsoft/Mezzurite-DevTools"
        target="_blank"
      >
        <GithubMark />
        <span
          className="github-information--text"
        >
          Visit us on GitHub
          <span
            className="tablet-hidden"
          >
             - The Mezzurite Development Team
          </span>
        </span>
      </a>
    </li>
    <li
      className="package-information"
    >
      <ul
        className="package-information--container"
      >
        <li
          className="package-information--name"
        >
          <span
            className="package-information--label"
          >
            <span
              className="tablet-hidden"
            >
              Package 
            </span>
            Name:
          </span>
          <a
            aria-label="Visit Mezzurite on GitHub"
            className="github-information--package"
            href="https://github.com/Microsoft/Mezzurite"
            target="_blank"
          >
            packageName
          </a>
        </li>
        <li
          className="package-information--version"
        >
          <span
            className="package-information--label"
          >
            <span
              className="tablet-hidden"
            >
              Package 
            </span>
            Version:
          </span>
          packageVersion
        </li>
      </ul>
    </li>
  </ul>
</footer>
`;

exports[`Footer.js should render the footer with only a packageName 1`] = `
<footer
  role="contentinfo"
>
  <ul
    className="footer--content"
  >
    <li>
      <a
        aria-label="Visit Mezzurite Dev Tools on GitHub"
        className="github-information--link"
        href="https://github.com/Microsoft/Mezzurite-DevTools"
        target="_blank"
      >
        <GithubMark />
        <span
          className="github-information--text"
        >
          Visit us on GitHub
          <span
            className="tablet-hidden"
          >
             - The Mezzurite Development Team
          </span>
        </span>
      </a>
    </li>
    <li
      className="package-information"
    >
      <ul
        className="package-information--container"
      >
        <li
          className="package-information--name"
        >
          <span
            className="package-information--label"
          >
            <span
              className="tablet-hidden"
            >
              Package 
            </span>
            Name:
          </span>
          <a
            aria-label="Visit Mezzurite on GitHub"
            className="github-information--package"
            href="https://github.com/Microsoft/Mezzurite"
            target="_blank"
          >
            packageName
          </a>
        </li>
      </ul>
    </li>
  </ul>
</footer>
`;

exports[`Footer.js should render the footer with only a packageVersion 1`] = `
<footer
  role="contentinfo"
>
  <ul
    className="footer--content"
  >
    <li>
      <a
        aria-label="Visit Mezzurite Dev Tools on GitHub"
        className="github-information--link"
        href="https://github.com/Microsoft/Mezzurite-DevTools"
        target="_blank"
      >
        <GithubMark />
        <span
          className="github-information--text"
        >
          Visit us on GitHub
          <span
            className="tablet-hidden"
          >
             - The Mezzurite Development Team
          </span>
        </span>
      </a>
    </li>
    <li
      className="package-information"
    >
      <ul
        className="package-information--container"
      >
        <li
          className="package-information--version"
        >
          <span
            className="package-information--label"
          >
            <span
              className="tablet-hidden"
            >
              Package 
            </span>
            Version:
          </span>
          packageVersion
        </li>
      </ul>
    </li>
  </ul>
</footer>
`;

exports[`Footer.js should render the footer without a packageName or packageVersion 1`] = `
<footer
  role="contentinfo"
>
  <ul
    className="footer--content"
  >
    <li>
      <a
        aria-label="Visit Mezzurite Dev Tools on GitHub"
        className="github-information--link"
        href="https://github.com/Microsoft/Mezzurite-DevTools"
        target="_blank"
      >
        <GithubMark />
        <span
          className="github-information--text"
        >
          Visit us on GitHub
          <span
            className="tablet-hidden"
          >
             - The Mezzurite Development Team
          </span>
        </span>
      </a>
    </li>
    <li
      className="package-information"
    >
      <ul
        className="package-information--container"
      />
    </li>
  </ul>
</footer>
`;
